# lyra-effects-studio

./: .gitattributes  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  NOTICE  Package.swift  README.md  SECURITY.md  package-lock.json  package.json
.github/: pull_request_template.md
.github/workflows/: ci.yml  registry.yml
Fixtures/Device/: adb-failures.json  adb-reverse-single-device.json  adb-single-device.json  hello-incompatible.json  hello-valid.json
Fixtures/Packs/valid-theme/: lyra-pack.json
Fixtures/Packs/valid-theme/theme/: lyra.css
Fixtures/Registry/: registry-v1.json  registry-v1.sig
Fixtures/Scenarios/: default-song.json
Registry/: README.md  license-audit.json
Registry/Packs/io.github.better-lyrics.theme-sustain/: NOTICE  lyra-pack.json  parameters.json  upstream.json
Registry/Packs/io.github.better-lyrics.theme-sustain/theme/: lyra.css
Registry/Packs/io.github.chengggit.youtube-music-dynamic-theme/: NOTICE  lyra-pack.json  upstream.json
Registry/Packs/io.github.chengggit.youtube-music-dynamic-theme/theme/: lyra.css
Registry/Packs/io.github.snw-mint.better-lyrics-modern-player/: NOTICE  lyra-pack.json  upstream.json
Registry/Packs/io.github.snw-mint.better-lyrics-modern-player/theme/: lyra.css
Schemas/: device-profile-v1.schema.json  license-audit-v1.schema.json  pack-manifest-v1.schema.json  parameter-schema-v1.schema.json  preview-scenario-v1.schema.json  registry-v1.schema.json
Scripts/: build-registry.sh  import-lyra-themes.sh  verify-reproducible.sh
Sources/LyraEffectsCLI/: CLI.swift  LicenseAuditCommand.swift  PackCommand.swift  RegistryCommand.swift  ValidateCommand.swift
Sources/LyraEffectsCLIExecutable/: main.swift
Sources/LyraEffectsStudio/: LyraEffectsStudioApp.swift
Sources/LyraPackKit/: CanonicalJSON.swift  JSONValue.swift  LyraPackKit.swift  PackArchiver.swift  PackManifest.swift  PackValidator.swift  SHA256Digest.swift  SemanticVersion.swift
Sources/LyraProjectKit/: CSSVariablePatcher.swift  DeviceProfile.swift  LyraProjectKit.swift  ParameterSchema.swift  PreviewScenario.swift  ProjectDescriptor.swift  ProjectDetector.swift  ProjectDiagnostic.swift  ProjectWatcher.swift
Sources/LyraProjectKit/Resources/DeviceProfiles/: avatr-star-ring-4032x284.json
Sources/LyraProjectKit/Resources/PreviewScenarios/: default-song.json
Sources/LyraRegistryKit/: LicenseAudit.swift  LyraRegistryKit.swift  RegistryBuilder.swift  RegistryCatalog.swift  RegistrySigner.swift  RegistryVerifier.swift
Tests/LyraEffectsCLITests/: CLITests.swift  SmokeTests.swift
Tests/LyraPackKitTests/: CanonicalJSONTests.swift  PackArchiverTests.swift  PackManifestTests.swift  PackValidatorTests.swift  SHA256DigestTests.swift  SemanticVersionTests.swift  SmokeTests.swift
Tests/LyraProjectKitTests/: CSSVariablePatcherTests.swift  DeviceProfileTests.swift  ParameterSchemaTests.swift  PreviewScenarioTests.swift  ProjectDetectorTests.swift  ProjectWatcherTests.swift  SmokeTests.swift
Tests/LyraRegistryKitTests/: RegistryCatalogTests.swift  RegistrySignerTests.swift  SmokeTests.swift
Tests/RegistrySourceTests/: RegistrySourceTests.swift
apps/studio/: README.md  index.html  package-lock.json  package.json  vite.config.ts
apps/studio/src/: App.css  App.test.tsx  App.tsx  index.css
apps/studio/src/lib/: backend.test.ts  backend.ts
apps/studio/src/studio/: model.test.ts  model.ts  parameterEditor.test.ts  parameterEditor.ts  previewDocument.test.ts  previewDocument.ts  projectSession.test.ts  projectSession.ts  sourceWorkspace.test.ts  sourceWorkspace.ts
crates/lyra-adb/: Cargo.toml
crates/lyra-adb/src/: adapter.rs  lib.rs
crates/lyra-cli/: Cargo.toml
crates/lyra-cli/src/: main.rs
crates/lyra-cli/tests/: cli_smoke.rs  workflows.rs
crates/lyra-dev-server/: Cargo.toml
crates/lyra-dev-server/src/: diagnostic.rs  lib.rs  server.rs  token.rs
crates/lyra-dev-server/tests/: hello.rs
crates/lyra-device/: Cargo.toml
crates/lyra-device/src/: adb.rs  fake_adb.rs  lib.rs  protocol.rs  reverse.rs  revision.rs
crates/lyra-device/tests/: fake_adb.rs  negotiation.rs  protocol.rs  reverse_coordinator.rs  revision.rs
crates/lyra-pack/: Cargo.toml
crates/lyra-pack/src/: archive.rs  canonical_json.rs  error.rs  lib.rs  manifest.rs  semantic_version.rs  validator.rs
crates/lyra-pack/tests/: contracts.rs  smoke.rs  validation.rs
crates/lyra-project/: Cargo.toml
crates/lyra-project/src/: css.rs  detector.rs  diagnostic.rs  error.rs  lib.rs  parameter.rs  profile.rs  scenario.rs  watcher.rs
crates/lyra-project/tests/: contracts.rs  smoke.rs
crates/lyra-registry/: Cargo.toml
crates/lyra-registry/src/: catalog.rs  crypto.rs  error.rs  lib.rs  license_audit.rs
crates/lyra-registry/tests/: contracts.rs  smoke.rs
docs/architecture/: rust-tauri.md
docs/design/: device-adb-reverse-coordinator.md  fake-first-device-core.md  loopback-dev-server.md  studio-device-bridge.md  system-adb-process-adapter.md  tauri-adb-preflight.md  tauri-adb-reverse-mapping.md
docs/operations/: registry-publishing.md  registry-publishing.zh-CN.md
docs/plans/: m3-dev-server.md  m3-device-adb-reverse.md  m3-device-core.md  m3-studio-device-bridge.md  m3-system-adb-process-adapter.md  m3-tauri-adb-preflight.md  m3-tauri-adb-reverse-mapping.md
docs/protocols/: dev-bridge-v1.md
docs/security/: preview-sandbox.md  project-filesystem.md  reproducibility.md
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: device_bridge.rs  lib.rs  main.rs  project.rs
