[package]
name = "lyra-effects-studio-app"
description = "Cross-platform Tauri shell for Lyra Effects Studio"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "lyra_effects_studio_app"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.11.3", features = [] }
tokio = { version = "1.52.3", features = ["io-util", "macros", "net", "rt-multi-thread", "sync"] }
lyra-pack = { path = "../crates/lyra-pack" }
lyra-project = { path = "../crates/lyra-project" }
lyra-registry = { path = "../crates/lyra-registry" }
lyra-device = { path = "../crates/lyra-device" }
lyra-adb = { path = "../crates/lyra-adb" }
lyra-dev-server = { path = "../crates/lyra-dev-server" }
tempfile = "3.27.0"
walkdir = "2.5.0"
tauri-plugin-dialog = "2.7.1"

[lints]
workspace = true
