[package]
name = "lyra-adb"
description = "Fixed-argv Android Debug Bridge process adapter for Lyra Effects Studio"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
lyra-device = { path = "../lyra-device" }
