[package]
name = "lyra-effects"
description = "Cross-platform command-line tools for Lyra Effects Studio"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[[bin]]
name = "lyra-effects"
path = "src/main.rs"

