[package]
name = "lyra-effects"
description = "Cross-platform command-line tools for Lyra Effects Studio"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[[bin]]
name = "lyra-effects"
path = "src/main.rs"

[dependencies]
base64 = "0.22.1"
clap = { version = "4.6.1", features = ["derive"] }
lyra-pack = { version = "0.1.0-alpha.1", path = "../lyra-pack" }
lyra-registry = { version = "0.1.0-alpha.1", path = "../lyra-registry" }
serde_json = "1.0.150"

[dev-dependencies]
base64 = "0.22.1"
tempfile = "3.27.0"

