[package]
name = "lyra-dev-server"
description = "Authenticated loopback Dev Bridge server for Lyra Effects Studio"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
axum = "0.8.9"
getrandom = "0.4.3"
lyra-device = { path = "../lyra-device" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["macros", "net", "rt-multi-thread", "sync"] }
