[package]
name = "lyra-pack"
description = "Theme Pack contracts and deterministic archives for Lyra"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
semver = "1.0.28"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sha2 = "0.11.0"
thiserror = "2.0.18"
walkdir = "2.5.0"
zip = { version = "8.6.0", default-features = false }

[dev-dependencies]
tempfile = "3.27.0"
