[package]
name = "lyra-registry"
description = "Signed Theme Registry contracts for Lyra"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
base64 = "0.22.1"
ed25519-dalek = "3.0.0"
lyra-pack = { version = "0.1.0-alpha.1", path = "../lyra-pack" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
thiserror = "2.0.18"

